--- a/index.html
+++ b/index.html
@@ -217,15 +217,19 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     <ul>
       <li>
         <strong><a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System (Java, Spring Boot)</a></strong>
-        <p>Description:A comprehensive School Management Software designed for EduExcellence, developed using Java, Spring Boot, Spring Web, Spring Data JPA, and H2 (in-memory database).</p>
+        <p>A comprehensive School Management Software designed for EduExcellence, developed using Java, Spring Boot, Spring Web, Spring Data JPA, and H2 (in-memory database).</p>
         </li>
       <li>
         <strong><a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS) (Java, Spring Boot)</a></strong>
-        <p>Description:Employee API Repository A Spring Boot-based RESTful API for managing employee data efficiently and effectively.</p>
+        <p>Employee API Repository A Spring Boot-based RESTful API for managing employee data efficiently and effectively.</p>
         </li>
       <li>
         <strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project (python, jupter notbook,databricks)</a></strong>
-        <p>Description:This repository contains code for an end-to-end Machine Learning and ETL (Extract, Transform, Load) project developed on Databricks, showcasing data processing, model training, and deployment using Flask.</p>
+        <p>This repository contains code for an end-to-end Machine Learning and ETL (Extract, Transform, Load) project developed on Databricks, showcasing data processing, model training, and deployment using Flask.</p>
+        </li>
+      <li>
+        <strong><a href="https://github.com/mollanegash/cybersecurity-anomaly-detection" target="_blank">Cybersecurity Anomaly Detection (ML, Python,jupter notbook, Google Colab)</a></strong>
+        <p>This repository contains code for detecting anomalies in cybersecurity using machine learning, developed on Google Colab.</p>
         </li>
     </ul>
 
@@ -233,19 +237,19 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     <ul>
       <li>
         <strong><a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a></strong>
-        <p>Description:A comprehensive web application for managing college students, courses, and registrations. Developed using PHP, MySQL, HTML, and CSS.)</p>
+        <p>A comprehensive web application for managing college students, courses, and registrations. Developed using PHP, MySQL, HTML, and CSS.)</p>
         </li>
       <li>
         <strong><a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a></strong>
-        <p>Description:FilesystemChained is a Java library that provides an efficient hash table implementation with chaining for collision resolution. This repository showcases a fundamental data structure in computer science, offering a reliable and scalable solution for various applications.</p>
+        <p>FilesystemChained is a Java library that provides an efficient hash table implementation with chaining for collision resolution. This repository showcases a fundamental data structure in computer science, offering a reliable and scalable solution for various applications.</p>
         </li>
       <li>
         <strong><a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a></strong>
-        <p>Description:This repository contains two PHP scripts for calculating income tax based on different filing statuses and tax tables.</p>
+        <p>This repository contains two PHP scripts for calculating income tax based on different filing statuses and tax tables.</p>
         </li>
       <li>
         <strong><a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a></strong>
-        <p>Description:The Computer Science Project Portal provides a scalable, integrated platform for project development and publication. Projects in different stages of development can share progress and seek input from other experts in their field. Every project submitted will be open source and searchable via keyword tagging manually from user submission and from keyword extraction in the project description.</p>
+        <p>The Computer Science Project Portal provides a scalable, integrated platform for project development and publication. Projects in different stages of development can share progress and seek input from other experts in their field. Every project submitted will be open source and searchable via keyword tagging manually from user submission and from keyword extraction in the project description.</p>
         </li>
     </ul>
     <h2>GitHub Profile</h2>
