--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
         <p>Employee API Repository A Spring Boot-based RESTful API for managing employee data efficiently and effectively.</p>
         </li>
       <li>
+       <li>
+    <strong><a href="https://github.com/mollanegash/toast-notifications-app" target="_blank">Toast Notifications App (Java, Spring Boot, H2 DB)</a></strong>
+    <p>A Spring Boot application designed for managing user notifications with CRUD operations using H2 in-memory database adn mysql. Includes features for creating, reading, updating, and deleting user notifications.</p>
+    </li>
         <strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project (python, jupter notbook,databricks)</a></strong>
         <p>This repository contains code for an end-to-end Machine Learning and ETL (Extract, Transform, Load) project developed on Databricks, showcasing data processing, model training, and deployment using Flask.</p>
         </li>
