--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
         </li>
       
        <li>
-    <strong><a href="https://github.com/mollanegash/toast-notifications-app" target="_blank">Toast Notifications App (Java, Spring Boot, H2 DB)</a></strong>
+    <strong><a href="https://github.com/mollanegash/toast-notifications-app" target="_blank">Toast Notifications App (Java, Spring Boot, MYSQL and H2 DB)</a></strong>
     <p>A Spring Boot application designed for managing user notifications with CRUD operations using H2 in-memory database adn mysql. Includes features for creating, reading, updating, and deleting user notifications.</p>
     </li>
         <strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project (python, jupter notbook,databricks)</a></strong>
