--- a/index.html
+++ b/index.html
@@ -102,10 +102,15 @@
         <i class="fas fa-briefcase"></i> Tech Lead  | Betsi Eco Hub LLC<br>
         <em>Austin, TX | December 2023 - Present</em><br>
         <ul>
-          <li>Spearheaded the development and maintenance of the company website, employing technologies including HTML, CSS, PHP, and MySQL.</li>
-          <li>Managed cloud services and server configurations, optimizing performance and ensuring robust security measures.</li>
-          <li>Led strategic initiatives resulting in SBA certification attainment and successful government contract engagements, employing agile project management methodologies.</li>
-        </ul>
+  <li>Engineered advanced big data processing solutions using Apache Spark and Java, driving innovation in healthcare and fintech.</li>
+  <li>Optimized data analytics and decision-making by training and deploying cutting-edge machine learning models.</li>
+  <li>Designed and deployed robust backend services with Spring Boot and JPA, managed with Docker and Kubernetes (K8s), including phishing anomaly detection.</li>
+  <li>Developed a scalable notification system using Java, Spring Boot, and MySQL, achieving 99.9% uptime and a 30% increase in engagement through optimized AWS and Redis integration.</li>
+  <li>Launched a scalable microservice with Java, PHP, and React, providing seamless online services and ensuring high performance.</li>
+  <li>Developed dynamic, responsive frontend interfaces with React, incorporating reusable components and state management with Redux and React Context API.</li>
+  <li>Implemented Selenium with ChromeDriver for automated testing of data processing pipelines to ensure accuracy and reliability.</li>
+</ul>
+
         <br>
         
         <i class="fas fa-briefcase"></i> Senior Java Developer | LTIMindtree<br>
