--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <em>Austin, TX | December 2023 - Present</em><br>
         <ul>
     <li>Developed a scalable notification system using Java, Spring Boot, and MySQL, achieving 99.9% uptime and a 30% increase in engagement through optimized AWS and Redis integration.</li>
+          <li>Created a Money Transfer Service with Java, Spring Boot, and MySQL, integrating with various payment systems for secure financial transactions, including transaction logging, error handling, and a user-friendly API.</li>
   <li>Engineered advanced big data processing solutions using Apache Spark and Java, driving innovation in healthcare and fintech.</li>
   <li>Optimized data analytics and decision-making by training and deploying cutting-edge machine learning models.</li>
   <li>Designed and deployed robust backend services with Spring Boot and JPA, managed with Docker and Kubernetes (K8s), including phishing anomaly detection.</li>
