--- a/index.html
+++ b/index.html
@@ -221,32 +221,43 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
   <div class="container">
     <h2>Repositories:</h2>
     <h3>Backend Development:</h3>
-    <ul>
-      <li>
-        <strong><a href="https://github.com/mollanegash/moneytransfer-service" target="_blank">Money Transfer Service (Java, Spring Boot)</a></strong>
-        <p>A robust Spring Boot application for managing money transfers. This project features transaction handling, account management, and secure transfer processing, demonstrating advanced backend development skills and error handling capabilities(Java, Spring Boot,Jpa,Mysql).</p>
-    </li>
-      <li>
-        <strong><a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System (Java, Spring Boot)</a></strong>
-        <p>A comprehensive School Management Software designed for EduExcellence, developed using Java, Spring Boot, Spring Web, Spring Data JPA, and H2 (in-memory database).</p>
-        </li>
-      <li>
-        <strong><a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS) (Java, Spring Boot)</a></strong>
-        <p>Employee API Repository A Spring Boot-based RESTful API for managing employee data efficiently and effectively.</p>
-        </li>
-      
-       <li>
-    <strong><a href="https://github.com/mollanegash/toast-notifications-app" target="_blank">Toast Notifications App (Java, Spring Boot, MYSQL and H2 DB)</a></strong>
-    <p>A Spring Boot application designed for managing user notifications with CRUD operations using H2 in-memory database adn mysql. Includes features for creating, reading, updating, and deleting user notifications.</p>
-    </li>
-        <strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project (python, jupter notbook,databricks)</a></strong>
-        <p>This repository contains code for an end-to-end Machine Learning and ETL (Extract, Transform, Load) project developed on Databricks, showcasing data processing, model training, and deployment using Flask.</p>
-        </li>
-      <li>
-        <strong><a href="https://github.com/mollanegash/cybersecurity-anomaly-detection" target="_blank">Cybersecurity Anomaly Detection (ML, Python,jupter notbook, Google Colab)</a></strong>
-        <p>This repository contains code for detecting anomalies in cybersecurity using machine learning, developed on Google Colab.</p>
-        </li>
-    </ul>
+   <ul>
+  <li>
+    <strong><a href="https://github.com/mollanegash/moneytransfer-service" target="_blank">Money Transfer Service (Java, Spring Boot)</a></strong>
+    <p>A robust Spring Boot application for managing money transfers. This project features transaction handling, account management, and secure transfer processing, demonstrating advanced backend development skills and error-handling capabilities.</p>
+  </li>
+  
+  <li>
+    <strong><a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence - School Management System (Java, Spring Boot)</a></strong>
+    <p>A comprehensive School Management Software developed using Java, Spring Boot, Spring Web, Spring Data JPA, and H2 (in-memory database) for EduExcellence. It offers a full suite of management tools for schools.</p>
+  </li>
+  
+  <li>
+    <strong><a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS) (Java, Spring Boot)</a></strong>
+    <p>A Spring Boot-based RESTful API for efficiently managing employee data. This system allows for CRUD operations, ensuring smooth data handling and user management.</p>
+  </li>
+  
+  <li>
+    <strong><a href="https://github.com/mollanegash/toast-notifications-app" target="_blank">Toast Notifications App (Java, Spring Boot, MySQL, H2 DB)</a></strong>
+    <p>A Spring Boot application for managing user notifications with CRUD operations, utilizing both H2 in-memory database and MySQL. It supports creating, reading, updating, and deleting user notifications.</p>
+  </li>
+  
+  <li>
+    <strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project (Python, Jupyter Notebook, Databricks)</a></strong>
+    <p>This repository contains code for an end-to-end Machine Learning and ETL (Extract, Transform, Load) project developed on Databricks. It showcases data processing, model training, and deployment using Flask.</p>
+  </li>
+  
+  <li>
+    <strong><a href="https://github.com/mollanegash/cybersecurity-anomaly-detection" target="_blank">Cybersecurity Anomaly Detection (ML, Python, Jupyter Notebook, Google Colab)</a></strong>
+    <p>This repository contains code for detecting anomalies in cybersecurity using machine learning techniques, developed on Google Colab.</p>
+  </li>
+  
+  <li>
+    <strong><a href="https://github.com/mollanegash/data-processor" target="_blank">Data Processor (Java, React)</a></strong>
+    <p>A full-stack application built using Java and React for processing and analyzing large datasets. This project demonstrates your expertise in integrating Java for backend processing with React for frontend user interfaces, showcasing your full-stack development skills.</p>
+  </li>
+</ul>
+
 
     <h3>Other Projects:</h3>
     <ul>
