--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
   </li>
   
   <li>
-    <strong><a href="https://github.com/mollanegash/data-processor" target="_blank">Data Processor (Java, React)</a></strong>
-    <p>A full-stack application built using Java and React for processing and analyzing large datasets. This project demonstrates your expertise in integrating Java for backend processing with React for frontend user interfaces, showcasing your full-stack development skills.</p>
+    <strong><a href="https://github.com/mollanegash/data-processor" target="_blank">Data Processor (Java, React,springboot,MYSQL)</a></strong>
+    <p>A full-stack application built using Java and React for processing and analyzing large datasets. his project demonstrates my expertise in integrating Java for backend processing with React for frontend user interfaces, showcasing my full-stack development skills.</p>
   </li>
 </ul>
 
