--- a/index.html
+++ b/index.html
@@ -257,7 +257,13 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     <p>A full-stack application built using Java and React for processing and analyzing large datasets. his project demonstrates my expertise in integrating Java for backend processing with React for frontend user interfaces, showcasing my full-stack development skills.</p>
   </li>
 </ul>
-
+<h3>Data Structures, Algorithms, and Coding Challenges:</h3>
+<ul>
+  <li>
+    <strong><a href="https://github.com/mollanegash/ContainerizedCoding-ProblemSolving" target="_blank">Containerized Coding Problem Solving</a></strong>
+    <p>A repository showcasing a wide range of problem-solving approaches, focusing on algorithmic challenges and data structure implementations. Solutions are containerized to ensure scalability and modular development.</p>
+  </li>
+</ul>
 
     <h3>Other Projects:</h3>
     <ul>
@@ -277,6 +283,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
         <strong><a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a></strong>
         <p>The Computer Science Project Portal provides a scalable, integrated platform for project development and publication. Projects in different stages of development can share progress and seek input from other experts in their field. Every project submitted will be open source and searchable via keyword tagging manually from user submission and from keyword extraction in the project description.</p>
         </li>
+      
     </ul>
     <h2>GitHub Profile</h2>
     <ul>
@@ -285,6 +292,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
       </li>
     </ul>
   </div>
+  
 </section>
  
 
