--- a/index.html
+++ b/index.html
@@ -99,18 +99,12 @@
         AWS Certified Cloud Specialist - Technical<br><br>
         
          <strong>EXPERIENCE</strong><br>
-        <i class="fas fa-briefcase"></i> Tech Lead  | Betsi Eco Hub LLC<br>
-        <em>Austin, TX | December 2023 - Present</em><br>
-        <ul>
-    <li>Developed a scalable notification system using Java, Spring Boot, and MySQL, achieving 99.9% uptime and a 30% increase in engagement through optimized AWS and Redis integration.</li>
-          <li>Created a Money Transfer Service with Java, Spring Boot, and MySQL, integrating with various payment systems for secure financial transactions, including transaction logging, error handling, and a user-friendly API.</li>
+        <i class="fas fa-briefcase"></i> Tech Lead | Betsi Eco Hub LLC<br>
+<em>Austin, TX | December 2023 - Present</em><br>
+<ul>
+  <li>Developed a scalable notification system using Java, Spring Boot, and MySQL, achieving 99.9% uptime and a 30% increase in engagement through optimized AWS and Redis integration.</li>
   <li>Engineered advanced big data processing solutions using Apache Spark and Java, driving innovation in healthcare and fintech.</li>
-  <li>Optimized data analytics and decision-making by training and deploying cutting-edge machine learning models.</li>
-  <li>Designed and deployed robust backend services with Spring Boot and JPA, managed with Docker and Kubernetes (K8s), including phishing anomaly detection.</li>
- 
-  <li>Launched a scalable microservice with Java, PHP, and React, providing seamless online services and ensuring high performance.</li>
-  <li>Developed dynamic, responsive frontend interfaces with React, incorporating reusable components and state management with Redux and React Context API.</li>
-  <li>Implemented Selenium with ChromeDriver for automated testing of data processing pipelines to ensure accuracy and reliability.</li>
+  <li>Implemented a secure Money Transfer Service with integrated transaction logging and error handling.</li>
 </ul>
 
         <br>
@@ -188,15 +182,30 @@ MS in Computer Science | Boston University | Boston, MA | May 2021<br>
 BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
 
-    <br><strong>TECHNICAL SKILLS</strong></br?
-         <ul class="skills-list">
-  <li>Programming Languages: Java (Expert), Python (Advanced), R (Intermediate)</li>
-  <li>Frameworks & Libraries: Spring Boot (Expert), Spring (Advanced), React (Intermediate), Angular (Intermediate)</li>
-  <li>Databases & Reporting: MySQL (Expert), PostgreSQL (Advanced), SSRS (Proficient)</li>
-  <li>Cloud Platforms: AWS (Advanced), GCP (Basic)</li>
-  <li>AI/ML & Big Data: Machine Learning Algorithms (Basic), Databricks (Intermediate)</li>
-  <li>Version Control: Git (Expert)</li>
-  </ul>
+<br><strong>Technical Skills</strong><br>
+<table>
+  <tr>
+    <th>Category</th>
+    <th>Skills</th>
+  </tr>
+  <tr>
+    <td>Programming Languages</td>
+    <td>Java (Expert), Python (Advanced), R (Intermediate)</td>
+  </tr>
+  <tr>
+    <td>Frameworks</td>
+    <td>Spring Boot (Expert), React (Intermediate), Angular (Intermediate)</td>
+  </tr>
+  <tr>
+    <td>Databases</td>
+    <td>MySQL (Expert), PostgreSQL (Advanced)</td>
+  </tr>
+  <tr>
+    <td>Cloud Platforms</td>
+    <td>AWS (Advanced), GCP (Basic)</td>
+  </tr>
+</table>
+
 
 
 </section>
