--- a/index.html
+++ b/index.html
@@ -190,21 +190,36 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
   </tr>
   <tr>
     <td>Programming Languages</td>
-    <td>Java (Expert), Python (Advanced), R (Intermediate)</td>
+    <td>
+      Java (Expert)<br>
+      Python (Advanced)<br>
+      R (Intermediate)
+    </td>
   </tr>
   <tr>
     <td>Frameworks</td>
-    <td>Spring Boot (Expert), React (Intermediate), Angular (Intermediate)</td>
+    <td>
+      Spring Boot (Expert)<br>
+      React (Intermediate)<br>
+      Angular (Intermediate)
+    </td>
   </tr>
   <tr>
     <td>Databases</td>
-    <td>MySQL (Expert), PostgreSQL (Advanced)</td>
+    <td>
+      MySQL (Expert)<br>
+      PostgreSQL (Advanced)
+    </td>
   </tr>
   <tr>
     <td>Cloud Platforms</td>
-    <td>AWS (Advanced), GCP (Basic)</td>
+    <td>
+      AWS (Advanced)<br>
+      GCP (Basic)
+    </td>
   </tr>
 </table>
+
 
 
 
