--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
 
 <br><strong>Technical Skills</strong><br>
-<table>
+<table style="border-collapse: collapse; width: 100%;">
   <tr>
-    <th>Category</th>
+    <th style="padding-right: 50px;">Category</th>
     <th>Skills</th>
   </tr>
   <tr>
-    <td>Programming Languages</td>
+    <td style="padding-right: 50px;">Programming Languages</td>
     <td>
       Java (Expert)<br>
       Python (Advanced)<br>
@@ -197,7 +197,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     </td>
   </tr>
   <tr>
-    <td>Frameworks</td>
+    <td style="padding-right: 50px;">Frameworks</td>
     <td>
       Spring Boot (Expert)<br>
       React (Intermediate)<br>
@@ -205,20 +205,21 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     </td>
   </tr>
   <tr>
-    <td>Databases</td>
+    <td style="padding-right: 50px;">Databases</td>
     <td>
       MySQL (Expert)<br>
       PostgreSQL (Advanced)
     </td>
   </tr>
   <tr>
-    <td>Cloud Platforms</td>
+    <td style="padding-right: 50px;">Cloud Platforms</td>
     <td>
       AWS (Advanced)<br>
       GCP (Basic)
     </td>
   </tr>
 </table>
+
 
 
 
