--- a/index.html
+++ b/index.html
@@ -185,35 +185,35 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 <br><strong>Technical Skills</strong><br>
 <table style="border-collapse: collapse; width: 100%;">
   <tr>
-    <th style="padding-right: 50px;">Category</th>
-    <th>Skills</th>
+    <th style="padding: 10px;">Category</th>
+    <th style="padding: 10px;">Skills</th>
   </tr>
   <tr>
-    <td style="padding-right: 50px;">Programming Languages</td>
-    <td>
+    <td style="padding: 10px;">Programming Languages</td>
+    <td style="padding: 10px;">
       Java (Expert)<br>
       Python (Advanced)<br>
       R (Intermediate)
     </td>
   </tr>
   <tr>
-    <td style="padding-right: 50px;">Frameworks</td>
-    <td>
+    <td style="padding: 10px;">Frameworks</td>
+    <td style="padding: 10px;">
       Spring Boot (Expert)<br>
       React (Intermediate)<br>
       Angular (Intermediate)
     </td>
   </tr>
   <tr>
-    <td style="padding-right: 50px;">Databases</td>
-    <td>
+    <td style="padding: 10px;">Databases</td>
+    <td style="padding: 10px;">
       MySQL (Expert)<br>
       PostgreSQL (Advanced)
     </td>
   </tr>
   <tr>
-    <td style="padding-right: 50px;">Cloud Platforms</td>
-    <td>
+    <td style="padding: 10px;">Cloud Platforms</td>
+    <td style="padding: 10px;">
       AWS (Advanced)<br>
       GCP (Basic)
     </td>
