--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 <br><strong>Technical Skills</strong><br>
 <table style="border-collapse: collapse; width: 100%;">
   <tr>
-    <th style="padding: 10px;">Category</th>
-    <th style="padding: 10px;">Skills</th>
+    <th style="padding: 10px; text-align: left;">Category</th>
+    <th style="padding: 10px; text-align: left;">Skills</th>
   </tr>
   <tr>
     <td style="padding: 10px;">Programming Languages</td>
-    <td style="padding: 10px;">
+    <td style="padding: 10px; padding-left: 50px;">
       Java (Expert)<br>
       Python (Advanced)<br>
       R (Intermediate)
@@ -198,7 +198,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
   </tr>
   <tr>
     <td style="padding: 10px;">Frameworks</td>
-    <td style="padding: 10px;">
+    <td style="padding: 10px; padding-left: 50px;">
       Spring Boot (Expert)<br>
       React (Intermediate)<br>
       Angular (Intermediate)
@@ -206,14 +206,14 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
   </tr>
   <tr>
     <td style="padding: 10px;">Databases</td>
-    <td style="padding: 10px;">
+    <td style="padding: 10px; padding-left: 50px;">
       MySQL (Expert)<br>
       PostgreSQL (Advanced)
     </td>
   </tr>
   <tr>
     <td style="padding: 10px;">Cloud Platforms</td>
-    <td style="padding: 10px;">
+    <td style="padding: 10px; padding-left: 50px;">
       AWS (Advanced)<br>
       GCP (Basic)
     </td>
