--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 <table style="border-collapse: collapse; width: 100%;">
   <tr>
     <th style="padding: 10px; text-align: left;">Category</th>
-    <th style="padding: 10px; text-align: left;">Skills</th>
+    <th style="padding: 10px; text-align: left;">Skills&nbsp;&nbsp;&nbsp;&nbsp;</th> <!-- Four spaces added here -->
   </tr>
   <tr>
     <td style="padding: 10px;">Programming Languages</td>
