--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 <table style="border-collapse: collapse; width: 100%;">
   <tr>
     <th style="padding: 10px; text-align: left;">Category</th>
-    <th style="padding: 10px; text-align: left;">Skills&nbsp;&nbsp;&nbsp;&nbsp;</th> <!-- Four spaces added here -->
+    <th style="padding: 10px; text-align: left; margin-left: 40px;">Skills</th> <!-- Pushed to the right using margin -->
   </tr>
   <tr>
     <td style="padding: 10px;">Programming Languages</td>
@@ -219,7 +219,6 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     </td>
   </tr>
 </table>
-
 
 
 
