--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
       <p>
         <strong>CERTIFICATIONS</strong><br>
         AWS Certified Cloud Specialist - Technical<br><br>
+        <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing" download>Download My Resume</a></p>
+
         
          <strong>EXPERIENCE</strong><br>
         <i class="fas fa-briefcase"></i> Tech Lead | Betsi Eco Hub LLC<br>
