--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
       font-family: Arial, sans-serif;
       background-color: #f1f1f1;
     }
+.download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white; /* Text color */
+    background-color: #007B7F; /* Green-blue color */
+    border: none;
+    border-radius: 5px;
+    text-decoration: none; /* Remove underline */
+    transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+.download-button:hover {
+    background-color: #005f5f; /* Darker shade on hover */
+}
 
     .container {
       max-width: 800px;
@@ -97,7 +112,8 @@
       <p>
         <strong>CERTIFICATIONS</strong><br>
         AWS Certified Cloud Specialist - Technical<br><br>
-        <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing" download><strong>Download My Resume<strong></a></p>
+       <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing>Download My Resume</a></p>
+
 
         
          <strong>EXPERIENCE</strong><br>
