--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       <p>
         <strong>CERTIFICATIONS</strong><br>
         AWS Certified Cloud Specialist - Technical<br><br>
-       <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing>Download My Resume</a></p>
+      <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing" download>Download My Resume</a></p>
+
 
 
         
