--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h2>Resume</h2>
       <p>
         <strong>CERTIFICATIONS</strong><br>
-        AWS Certified Cloud Specialist - Technical<br><br>
+        AWS Certified Cloud Specialist - Technical<br>
       <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing" download>Download My Resume</a></p>
 
 
