--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
       <p>
         <strong>CERTIFICATIONS</strong><br>
         AWS Certified Cloud Specialist - Technical<br>
-      <p><a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing" download>Download My Resume</a></p>
+      <p style="font-weight: bold; color: white;">
+  <a href="https://docs.google.com/document/d/1wgFpgwH-zVchofJ6JTIg1LMu8h3dRGpmRcE0OzkiaJs/edit?usp=sharing" download style="display: inline-block; padding: 10px 20px; font-size: 16px; color: white; background-color: #007B7F; border: none; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease;">
+    Download My Resume
+  </a>
+</p>
 
 
 
