--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
         <strong><a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a></strong>
         <p>The Computer Science Project Portal provides a scalable, integrated platform for project development and publication. Projects in different stages of development can share progress and seek input from other experts in their field. Every project submitted will be open source and searchable via keyword tagging manually from user submission and from keyword extraction in the project description.</p>
         </li>
+      <li>
+    <strong><a href="https://selammartcafe.com/" target="_blank">Selam International Mart & Cafe E-Commerce Platform</a></strong>
+    <p>The Selam International Mart & Cafe e-commerce platform was developed using WordPress and integrated with AWS for scalability and Stripe for secure payments, providing a seamless shopping experience.</p>
+</li>
       
     </ul>
     <h2>GitHub Profile</h2>
