--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 <section id="portfolio">
   <div class="container">
     <h2>Repositories:</h2>
+    <h3>Full-stack Applications:</h3>
+<ul>
+  <li>
+    <strong><a href="https://github.com/mollanegash/ordertrackingsystem" target="_blank">Order Tracking System (Java, Spring Boot, React)</a></strong>
+    <p>A full-stack order tracking system with a Java Spring Boot backend and a React.js frontend. Features include multi-product ordering, shipping status tracking, customer type differentiation (personal & corporate), credit checks, and reward point logic. This project showcases end-to-end development including RESTful API design, in-memory H2 database, React forms, and UI rendering.</p>
+  </li>
+</ul>
     <h3>Backend Development:</h3>
    <ul>
   <li>
