Update banner image source in index.html

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- 🌟 BIA BRANDING BANNER 🌟 -->
     <div class="banner-container">
         <!-- The image URL remains in the HTML -->
-        <img src="https://placehold.co/1584x396/1A237E/00C853?text=BIA+Theory+Banner%0AMicroeconomics+of+Microservices%0A%0A[REPLACE+WITH+YOUR+FINAL+IMAGE]" 
-             alt="Molla Negash BIA Theory Banner: Microeconomics of Microservices" 
-             class="banner-img">
+       <img src="images/Microeconomics of Microservices Banner.png" 
+     alt="Molla Negash BIA Theory Banner" 
+     class="banner-img">
     </div>
 
     <header>
